--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+cached/
+convlab_data/
+data/data2.0/
+data/data2.1/
+lightning_logs/
+
+.idea/
 # Created by .ignore support plugin (hsz.mobi)
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
