--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,4 @@
-<<<<<<< HEAD
 torch==1.5.0
 pytorch-lightning==0.7.6
-tqdm
-ipdb
-=======
-pytorch-lightning >= 0.7.5
->>>>>>> master
+torchtext==0.6.0
+revtok
